add hindi and tibetan wikis

--- a/home/wiki/App/Personal_wikis/Search.html
+++ b/home/wiki/App/Personal_wikis/Search.html
@@ -65,7 +65,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_3" title="App/Search" class="xowa-visited">App/Search</a>: For details about search query. (You can use booleans and wildcards)
+        <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_3" title="App/Search">App/Search</a>: For details about search query. (You can use booleans and wildcards)
       </li>
       <li>
         <a href="http://xowa.org/home/wiki/App/Search/Score.html" id="xolnki_4" title="App/Search/Score">App/Search/Score</a>: For details about PageRank and scoring
