--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -334,7 +334,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_5" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_5" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -344,7 +344,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Gujarati_wikis.html" id="xolnki_6" title="Wiki setup/Gujarati wikis" class="xowa-visited">Wiki_setup/Gujarati_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Gujarati_wikis.html" id="xolnki_6" title="Wiki setup/Gujarati wikis">Wiki_setup/Gujarati_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -914,7 +914,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Change_log/2016.html" id="xolnki_15" title="Change log/2016" class="xowa-visited">2016 Change Log</a>
+        <a href="http://xowa.org/home/wiki/Change_log/2016.html" id="xolnki_15" title="Change log/2016">2016 Change Log</a>
       </li>
       <li>
         <a href="http://xowa.org/home/wiki/Change_log/2015.html" id="xolnki_16" title="Change log/2015">2015 Change Log</a>
