--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -897,7 +897,7 @@
     </p>
     <ul>
       <li>
-        Graph: Add support for Graph extension; EX:/bin/any/xowa/xtns/Graph {detected by gnosygnu.build.warning}. See: <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph.html" id="xolnki_12" title="Diagnostics/Javascript/Graph">Diagnostics/Javascript/Graph</a> <a href="https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone</a> <a href="https://de.wikipedia.org/wiki/Freital" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Freital</a>
+        Graph: Add support for Graph extension; EX:/bin/any/xowa/xtns/Graph {detected by gnosygnu.build.warning}. See: <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph.html" id="xolnki_12" title="Diagnostics/Javascript/Graph" class="xowa-visited">Diagnostics/Javascript/Graph</a> <a href="https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone</a> <a href="https://de.wikipedia.org/wiki/Freital" rel="nofollow" class="external free">https://de.wikipedia.org/wiki/Freital</a>
       </li>
     </ul>
     <p>
@@ -1008,7 +1008,7 @@
     </p>
     <ul>
       <li>
-        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
+        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
       </li>
       <li>
         File: Use thumb size when specified for videos, not original size (affects several video thumbnails showing with large size); EX:[[File:A.ogv|thumb]] -&gt; 220px x&gt; original_px. See: <a href="https://en.wikipedia.org/wiki/Edward_Snowden" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Edward_Snowden</a> <a href="https://en.wikipedia.org/wiki/Xinjiang" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Xinjiang</a> <a href="https://en.wikipedia.org/wiki/Alice_Brady" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Alice_Brady</a> [broken since:v2.8.2]
@@ -1067,7 +1067,7 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Fix test to expect "home" instead of "Home". See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/SiteLibrary.html" id="xolnki_16" title="Diagnostics/Scribunto/SiteLibrary" class="xowa-visited">Diagnostics/Scribunto/SiteLibrary</a>
+        Diagnostics: Fix test to expect "home" instead of "Home". See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/SiteLibrary.html" id="xolnki_16" title="Diagnostics/Scribunto/SiteLibrary">Diagnostics/Scribunto/SiteLibrary</a>
       </li>
     </ul>
     <p>
@@ -2272,7 +2272,7 @@
         Wikidata: Use correct namespace / title when looking up wikidata wikis (affects wikidata language links / properties not working for titles in non-canonical namespaces); EX:"Author:A" -&gt; 102,A x&gt; 0,Author:A {detected by anonymous}. See: <a href="https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos" rel="nofollow" class="external free">https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos</a> [broken since:v2.4.2]
       </li>
       <li>
-        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online">Dashboard/Import/Online</a> [broken since:v2.4.3]
+        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> [broken since:v2.4.3]
       </li>
     </ul>
     <p>
@@ -2393,7 +2393,7 @@
         Language: Show messages for Wikidata codes (affects &lt;some-key&gt; showing up on Wikidata instead of "value"); EX:&lt;Wikibase-entity-item&gt; -&gt; "item" {detected by anonymous}. See: <a href="https://www.wikidata.org" rel="nofollow" class="external free">https://www.wikidata.org</a>
       </li>
       <li>
-        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
     </ul>
     <p>
@@ -2451,7 +2451,7 @@
         Search: Rewrite search module for improved performance. See: <a href="https://en.wikipedia.org/wiki/Special:Search/Earth*_AND_(History_OR_Future)_AND_-%22middle_earth%22" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Special:Search/Earth*_AND_(History_OR_Future)_AND_-%22middle_earth%22</a>
       </li>
       <li>
-        Search: Upgrade search databases for improved performance. See: <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_47" title="App/Search" class="xowa-visited">App/Search</a>
+        Search: Upgrade search databases for improved performance. See: <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_47" title="App/Search">App/Search</a>
       </li>
       <li>
         Search: Run searches in background thread.
@@ -2577,7 +2577,7 @@
     </p>
     <ul>
       <li>
-        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
+        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
       </li>
       <li>
         File: Download file if not available for offline database users.
