--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -827,7 +827,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_11" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_11" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -1131,7 +1131,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_17" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_17" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -1435,7 +1435,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Include latest download central database.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_20" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_21" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_20" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_21" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h2>
@@ -1451,7 +1451,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_22" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_22" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -1677,7 +1677,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Files/Deletion.html" id="xolnki_27" title="Dashboard/Files/Deletion" class="xowa-visited">Dashboard/Files/Deletion</a> <a href="https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Files/Deletion.html" id="xolnki_27" title="Dashboard/Files/Deletion">Dashboard/Files/Deletion</a> <a href="https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa" rel="nofollow" class="external free">https://archive.org/download/Xowa_enwiki_latest/en.wikipedia.org-file-deletion-2016.09.xowa</a>
       </dd>
     </dl>
     <ul>
@@ -4576,7 +4576,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Files/Deletion.html" id="xolnki_62" title="Dashboard/Files/Deletion" class="xowa-visited">Dashboard/Files/Deletion</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Files/Deletion.html" id="xolnki_62" title="Dashboard/Files/Deletion">Dashboard/Files/Deletion</a>
       </dd>
     </dl>
     <p>
@@ -4639,7 +4639,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_65" title="App/Search" class="xowa-visited">App/Search</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_65" title="App/Search">App/Search</a>
       </dd>
     </dl>
     <ul>
