--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -93,7 +93,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_12" title="App/Search" class="xowa-visited">Overview</a>
+              <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_12" title="App/Search">Overview</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Search/Address_bar.html" id="xolnki_13" title="App/Search/Address bar">Searching with the address bar</a>
@@ -316,7 +316,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_49" title="Help/License/Code" class="xowa-visited">License/Code</a>
+              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_49" title="Help/License/Code">License/Code</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_50" title="Help/License/Docs">License/Docs</a>
