--- a/home/wiki/Help/License/Code.html
+++ b/home/wiki/Help/License/Code.html
@@ -34,7 +34,7 @@
     </p>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Help/License/GPLv3.html" id="xolnki_2" title="Help/License/GPLv3" class="xowa-visited">GPLv3 License</a>
+        <a href="http://xowa.org/home/wiki/Help/License/GPLv3.html" id="xolnki_2" title="Help/License/GPLv3">GPLv3 License</a>
       </li>
       <li>
         <a href="http://xowa.org/home/wiki/Help/License/Apache2.html" id="xolnki_3" title="Help/License/Apache2">Apache2 License</a>
