--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -85,7 +85,7 @@
       <span class="mw-headline" id="Disclaimer">Disclaimer</span>
     </h2>
     <p>
-      Please note that this program is beta software. Although it is my best hope that you find this program functional and useful, I make no assurances regarding stability or fitness of purpose. For more details, see <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_2" title="Help/License/Code" class="xowa-visited">Help/License/Code</a>.
+      Please note that this program is beta software. Although it is my best hope that you find this program functional and useful, I make no assurances regarding stability or fitness of purpose. For more details, see <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_2" title="Help/License/Code">Help/License/Code</a>.
     </p>
     <h2>
       <span class="mw-headline" id="Release_notes">Release notes</span>
@@ -201,7 +201,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -280,7 +280,7 @@
         v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_20" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
       </li>
       <li>
-        v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_21" title="App/Search" class="xowa-visited">App/Search</a>
+        v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_21" title="App/Search">App/Search</a>
       </li>
     </ul>
     <dl>
@@ -315,7 +315,7 @@
         v2.5.4 has changed online file downloads. Among other things, ImageMagick and Inkscape are no longer required. For more info, see <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_26" title="App/Basics/Files">Files</a>
       </li>
       <li>
-        v2.4.2 has improved Search performance and v2.4.4 has added multi-wiki Search. For more info, see <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_27" title="App/Search" class="xowa-visited">App/Search</a>
+        v2.4.2 has improved Search performance and v2.4.4 has added multi-wiki Search. For more info, see <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_27" title="App/Search">App/Search</a>
       </li>
       <li>
         v2.4.1 has introduced major database layout changes. For more info, see <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_28" title="Dev/Design/Database">Database</a>
@@ -402,7 +402,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_37" title="Dashboard/Import/Online">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_37" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 829 known Wikimedia Foundation wikis
