--- a/home/wiki/Wiki_setup/Tibetan_wikis.html
+++ b/home/wiki/Wiki_setup/Tibetan_wikis.html
@@ -2,7 +2,7 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Wiki setup/Simple wikis - XOWA</title>
+  <title>Wiki setup/Tibetan wikis - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   
@@ -11,7 +11,7 @@
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>Wiki setup/Simple wikis</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Wiki setup/Tibetan wikis</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
@@ -21,7 +21,7 @@
       <span class="mw-headline" id="Overview">Overview</span>
     </h2>
     <p>
-      This page describes how to set up Simple wikis on your machine. The following two options are available:
+      This page describes how to set up Tibetan wikis on your machine. The following two options are available:
     </p>
     <h3>
       <span class="mw-headline" id="Download_pre-built_wikis_from_archive.org">Download pre-built wikis from archive.org</span>
@@ -98,13 +98,13 @@
           <a href="#URLS"><span class="tocnumber">4</span> <span class="toctext">URLS</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-11">
-              <a href="#simple.wikipedia.org"><span class="tocnumber">4.1</span> <span class="toctext">simple.wikipedia.org</span></a> 
+              <a href="#bo.wikipedia.org"><span class="tocnumber">4.1</span> <span class="toctext">bo.wikipedia.org</span></a> 
               <ul>
                 <li class="toclevel-3 tocsection-12">
-                  <a href="#simple.wikipedia.org_Articles_.282017-01.29"><span class="tocnumber">4.1.1</span> <span class="toctext">simple.wikipedia.org Articles (2017-01)</span></a>
+                  <a href="#bo.wikipedia.org_Articles_.282017-03.29"><span class="tocnumber">4.1.1</span> <span class="toctext">bo.wikipedia.org Articles (2017-03)</span></a>
                 </li>
                 <li class="toclevel-3 tocsection-13">
-                  <a href="#simple.wikipedia.org_Images_.282017-01.29"><span class="tocnumber">4.1.2</span> <span class="toctext">simple.wikipedia.org Images (2017-01)</span></a>
+                  <a href="#bo.wikipedia.org_Images_.282017-03.29"><span class="tocnumber">4.1.2</span> <span class="toctext">bo.wikipedia.org Images (2017-03)</span></a>
                 </li>
               </ul>
             </li>
@@ -133,7 +133,7 @@
       <dd>
         <dl>
           <dd>
-            Simple English Wikipedia - Articles (2017-01) [417.93 MB]
+            བོད་ཡིག Wikipedia - Articles (2017-03) [27.82 MB]
           </dd>
         </dl>
       </dd>
@@ -142,7 +142,7 @@
       <dd>
         <dl>
           <dd>
-            Simple English Wikipedia - Images (2017-01) [2.9 GB]
+            བོད་ཡིག Wikipedia - Images (2017-03) [117.8 MB]
           </dd>
         </dl>
       </dd>
@@ -152,7 +152,7 @@
         In the <b>Queue</b> table, click the Play button
       </li>
       <li>
-        Wait for the Queue to process. When it is done, enter the wiki URL in the bar. For example, <code>simple.wikipedia.org</code>
+        Wait for the Queue to process. When it is done, enter the wiki URL in the bar. For example, <code>bo.wikipedia.org</code>
       </li>
     </ul>
     <h3>
@@ -171,10 +171,10 @@
         </ul>
       </li>
       <li>
-        Unzip them and move the .xowa file to the proper wiki directory. For example, for simple.wikipedia.org, move the files to <code>C:\xowa\wiki\simple.wikipedia.org</code>
+        Unzip them and move the .xowa file to the proper wiki directory. For example, for bo.wikipedia.org, move the files to <code>C:\xowa\wiki\bo.wikipedia.org</code>
       </li>
       <li>
-        Start XOWA and enter the wiki URL in the bar. For example, <code>simple.wikipedia.org</code>
+        Start XOWA and enter the wiki URL in the bar. For example, <code>bo.wikipedia.org</code>
       </li>
     </ul>
     <h2>
@@ -216,80 +216,75 @@
       <span class="mw-headline" id="URLS">URLS</span>
     </h2>
     <h3>
-      <span class="mw-headline" id="simple.wikipedia.org">simple.wikipedia.org</span>
+      <span class="mw-headline" id="bo.wikipedia.org">bo.wikipedia.org</span>
     </h3>
     <h4>
-      <span class="mw-headline" id="simple.wikipedia.org_Articles_.282017-01.29">simple.wikipedia.org Articles (2017-01)</span>
+      <span class="mw-headline" id="bo.wikipedia.org_Articles_.282017-03.29">bo.wikipedia.org Articles (2017-03)</span>
     </h4>
     <div style="margin-left: 2em">
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_core.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_core.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.search.core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.search.core.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_xtn.search.core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_xtn.search.core.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.core.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_xtn.category.core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_xtn.category.core.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.link_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.link_db.001.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_xtn.category.link_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_xtn.category.link_db.001.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.000.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.000.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.000.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.000.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.004.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.004.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.004.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.004.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.014.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.014.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.014.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.014.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.008.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.008.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.008.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.008.zip</a>
         </li>
       </ul>
     </div>
     <h4>
-      <span class="mw-headline" id="simple.wikipedia.org_Images_.282017-01.29">simple.wikipedia.org Images (2017-01)</span>
+      <span class="mw-headline" id="bo.wikipedia.org_Images_.282017-03.29">bo.wikipedia.org Images (2017-03)</span>
     </h4>
     <div style="margin-left: 2em">
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_core.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_core.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_core.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.001.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_ns.000_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_ns.000_db.001.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.002.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.002.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_ns.004_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_ns.004_db.001.zip</a>
         </li>
       </ul>
       <ul>
         <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.004_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.004_db.001.zip</a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a href="http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.014_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.014_db.001.zip</a>
+          <a href="http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_ns.014_db.001.zip" rel="nofollow" class="external free">http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_ns.014_db.001.zip</a>
         </li>
       </ul>
     </div>
@@ -297,19 +292,18 @@
       <span class="mw-headline" id="All_links">All links</span>
     </h3>
 <pre style='height: 10pc; overflow-y: scroll;'>
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_core.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.search.core.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.000.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.004.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.014.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_html_ns.008.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.core.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_xtn.category.link_db.001.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_core.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.001.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.000_db.002.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.004_db.001.zip
-http://archive.org/download/Xowa_simplewiki_latest/Xowa_simplewiki_2017-01_file_ns.014_db.001.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_core.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_xtn.search.core.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.000.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.004.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.014.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_html_ns.008.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_xtn.category.core.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_xtn.category.link_db.001.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_core.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_ns.000_db.001.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_ns.004_db.001.zip
+http://archive.org/download/Xowa_bowiki_latest/Xowa_bowiki_2017-03_file_ns.014_db.001.zip
 
 </pre>
   
