--- a/home/wiki/Change_log/v4.3.0.1702.html
+++ b/home/wiki/Change_log/v4.3.0.1702.html
@@ -30,7 +30,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -40,7 +40,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Gujarati_wikis.html" id="xolnki_3" title="Wiki setup/Gujarati wikis" class="xowa-visited">Wiki_setup/Gujarati_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Gujarati_wikis.html" id="xolnki_3" title="Wiki setup/Gujarati wikis">Wiki_setup/Gujarati_wikis</a>
       </dd>
     </dl>
     <h3>
